@startuml
'https://plantuml.com/class-diagram
interface RankDao {
    + select(): List<Rank>
    + toArray(): String[][]
    + delete(Rank rank)): void
    + add(Rank rank): void
    + selectById(int id): Rank
}

class RankDaoImpl {
    - ranks: List<Rank>
    - filePath: String
    + RankDaoImpl()
    + toArray(): String[][]
    + delete(Rank rank): void
    + select(): List<Rank>
    + add(Rank rank): void
    + selectById(int id): Rank
}

class Rank {
    - name: String
    - score: int
    - time: String
    + Rank()
    + Rank(String name, int score, String time)
    + getName(): String
    + getScore(): int
    + getTime(): String
    + setName(String name): void
    + setScore(int score): void
    + setTime(String time): void
}

class ScoreTable {
    - rankDao: RankDao
}

Rank <-- RankDaoImpl
RankDao <|.. RankDaoImpl
RankDao <.. ScoreTable
@enduml